# API-RUST

./: Cargo.toml
.github/workflows/: general.yml
migrations/: 20250822042029_create_subscriptions_table.sql
scripts/: init_db.sh
src/: configuration.rs  lib.rs  main.rs  startup.rs
src/routes/: mod.rs  subscriptions.rs
tests/: health_check.rs
